fixing info box on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -222,8 +222,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .infohoverdetails {
 	background-color:white;
-	width:400px;
-	max-width: 58%;
+	max-width:400px;
 	padding:20px;
 }
 
